--- a/Exo-persistence/src/main/resources/hibernate.properties
+++ b/Exo-persistence/src/main/resources/hibernate.properties
@@ -6,5 +6,5 @@ hibernate.connection.url = jdbc:mysql://localhost/dbhibernate
 hibernate.connection.username = root
 hibernate.connection.password = root
 hibernate.show_sql = true
-hibernate.hbm2ddl.auto=create-drop
+hibernate.hbm2ddl.auto=create
 hibernate.connection.autocommit = false
