--- a/Exo-persistence/pom.xml
+++ b/Exo-persistence/pom.xml
@@ -22,7 +22,14 @@
             <scope>provided</scope>
         </dependency>
 
-    <dependency>
+        <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-validator -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>8.0.1.Final</version>
+        </dependency>
+
+        <dependency>
 
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-entitymanager</artifactId>
