--- a/TP-TodoList-Security/Tp-todolist-security/src/main/resources/application.properties
+++ b/TP-TodoList-Security/Tp-todolist-security/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Tp-todolist-security
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/dbsecurity
+spring.datasource.url=jdbc:mysql://mysql-1:3306/dbsecurity
 spring.datasource.username=swino
 spring.datasource.password=fjteigti
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
